# CodeGuard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
codeguard/: __init__.py  api.py  cli.py  config.py  context.py  github.py  heuristics.py  llm.py  models.py  postprocess.py  prompts.py  reviewer.py  rules.py
docs/: DESIGN.md
rules/: default.md
scripts/: dev.sh
web/: index.html
web/static/: app.js  style.css
