[project]
name = "codeguard-ai"
version = "0.1.0"
description = "GitHub PR 智能 Code Review 助手"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
  "rich>=13.9.0",
  "jinja2>=3.1.0",
]

[project.scripts]
codeguard = "codeguard.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["codeguard*"]
